--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
   "pymunk==6.2.1",
   "gym==0.26.2",
   "shapely==1.8.5",
+  "hydra-core==1.3.2",
+  "ipython>=8.18.1"
 ]
 
 [tool.hatch.build.targets.wheel]
