--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-*/output/*
-outputs/*
-data/*
-*__pycache__
-*.pt
-*.ckpt
-*.mp4
+# Folders created by the training and inference tasks
+checkpoints/
+data/
+outputs/
 
+# Folders created by ROS2 package building
 build/
 log/
 install/
+
+*__pycache__
+.vscode/
