--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,32 +6,30 @@ build-backend = "hatchling.build"
 name = "prodapt"
 version = "0.0.1"
 dependencies = [
-  "gdown",
-  "opencv-python",
-  "torch==2.2.1",
-  "torchvision",
-  "diffusers==0.18.2",
-  "scikit-image==0.19.3",
-  "scikit-video==1.1.11",
-  "zarr==2.12.0",
-  "numcodecs==0.12.1",
-  "pygame==2.1.3.dev8",
-  "pymunk==6.2.1",
-  "gym==0.26.2",
-  "shapely==1.8.5",
-  "hydra-core==1.3.2",
-  "ipython>=8.18.1"
+  "gdown~=5.1.0",
+  "opencv-python~=4.9.0.80",
+  "torch==2.2.1+cu118",
+  "diffusers~=0.18.2",
+  "scikit-image~=0.19.3",
+  "scikit-video~=1.1.11",
+  "zarr~=2.12.0",
+  "pygame~=2.1.3",
+  "pymunk~=6.2.1",
+  "gymnasium~=0.29.1",
+  "shapely~=1.8.5",
+  "hydra-core~=1.3.2",
+  "ipython~=8.11.0",
 ]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/prodapt"]
 
-requires-python = ">=3.9"
+requires-python = "~=3.8"
 authors = [
   {name = "Bryson Jones", email = "bryson.jones@jpl.nasa.gov"}
 ]
 maintainers = [
-  {name = "Bryson Jones", email = "bryson.jones@jpl.nasa.gov"}
+  {name = "Federico Pizarro Bejarano", email = "bejarano@jpl.nasa.gov"}
 ]
 description = "A package for proprioceptive adaptation methods for robotics manipulation"
 readme = "README.md"
