--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3'
-
 services:
   ursim:
-    image: universalrobots/ursim_e-series
+    image: ursim:latest
     ports:
       - 6080:6080
     environment:
