--- a/src/spacenav_converter/package.xml
+++ b/src/spacenav_converter/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>spacenav_to_movel</name>
+  <name>spacenav_converter</name>
   <version>0.0.0</version>
-  <description>Converts Spacenav messages from 3D mouse to URScript MoveL messages.</description>
+  <description>Converts Spacenav messages from 3D mouse to different messages to command UR10.</description>
   <maintainer email="bejarano@jpl.nasa.gov">bejarano</maintainer>
   <license>Copyright 2024 NASA Jet Propulsion Laboratory</license>
 
