--- a/config/ur10.yaml
+++ b/config/ur10.yaml
@@ -4,14 +4,14 @@ seed: 4077
 
 controller: movel  # possible values: movel, joints
 action_dict: ['position', 'rotation_6d']  # possible values: position, rotation_6d
-obs_dict: ['joint_pos', 'joint_vel']  # possible values: joint_pos, joint_vel, joint_eff, ee_position, ee_rotation_6d
+obs_dict: ['ee_position', 'ee_rotation_6d']  # possible values: joint_pos, joint_vel, joint_eff, ee_position, ee_rotation_6d
 
 train:
   num_epochs: 100
   dataset_path: "./data/ur10/ur10.zarr"
 
 inference:
-  max_steps: 350
+  max_steps: 300
   render: False
   checkpoint_path: "./checkpoints/diffusion_policy.pt"
 
