--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
   "shapely~=1.8.5",
   "hydra-core~=1.3.2",
   "ipython~=8.11.0",
+  "pandas~=2.0.1",
 ]
 
 [tool.hatch.build.targets.wheel]
