--- a/src/spacenav_converter/setup.cfg
+++ b/src/spacenav_converter/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/spacenav_converter
+script_dir=$base/lib/spacenav_converter
 [install]
-install-scripts=$base/lib/spacenav_converter
+install_scripts=$base/lib/spacenav_converter
