--- a/config/ur10_cube.yaml
+++ b/config/ur10_cube.yaml
@@ -3,26 +3,50 @@ mode: inference
 seed: 4077
 
 controller: joints  # possible values: joints
-action_dict: ['commanded_ee_position']  # possible values: commanded_ee_position, commanded_ee_rotation_6d, commanded_joints
-obs_dict: ['ee_position', 'force', 'torque']  # possible values: joint_pos, joint_vel, joint_eff, ee_position, ee_rotation_6d, force, torque
+action_list: ['commanded_ee_position_xy']  # possible values: commanded_ee_position, commanded_ee_rotation_6d, commanded_joints
+obs_list: ['ee_position_xy', 'torque']  # possible values: joint_pos, joint_vel, joint_eff, ee_position, ee_rotation_6d, force, torque
+keypoints_in_obs: True
 
-network:
-  use_transformer: False
+use_transformer: False
+
+transformer_args:
+  n_layer: 8
+  n_head: 4
+  n_emb: 256
+  p_drop_emb: 0.0
+  p_drop_attn: 0.01
+
+  causal_attn: True
+  time_as_cond: True # if false, use BERT like encoder only arch, time as input
+  obs_as_cond: True
+  n_cond_layers: 0 # >0: use transformer encoder for cond, otherwise use MLP
+
+unet_args:
+  diffusion_step_embed_dim: 256
+  down_dims: [256, 512, 1024]
+  kernel_size: 5
+  n_groups: 8
 
 train:
-  num_epochs: 100
-  dataset_path: "./data/ur10/cube.zarr"
+  num_epochs: 1000
+  dataset_path: "./data/ur10/simple2.zarr"
 
 inference:
   max_steps: 500
   render: False
-  checkpoint_path: "./checkpoints/cube_bypass.pt"
+  checkpoint_path: "./checkpoints/simple2_bypass.pt"
   simulator: isaacsim  # possible values: isaacsim
+  warmstart: True
 
 parameters:
-  num_diffusion_iters: 10
+  num_diffusion_iters: 15
 
   # Diffusion horizons
   pred_horizon: 20
-  obs_horizon: 20
-  action_horizon: 3
+  obs_horizon: 3
+  action_horizon: 5
+
+keypoint_args:
+  num_keypoints: 1
+  min_dist: 0.0254
+  threshold_force: 1.0
