--- a/config/ur10_cube.yaml
+++ b/config/ur10_cube.yaml
@@ -7,7 +7,7 @@ action_list: ['commanded_ee_position_xy']  # possible values: commanded_ee_posit
 obs_list: ['ee_position_xy', 'torque']  # possible values: joint_pos, joint_vel, joint_eff, ee_position, ee_rotation_6d, force, torque
 keypoints_in_obs: True
 
-use_transformer: False
+use_transformer: True
 
 transformer_args:
   n_layer: 8
@@ -29,12 +29,13 @@ unet_args:
 
 train:
   num_epochs: 1000
-  dataset_path: "./data/ur10/simple2.zarr"
+  dataset_path: "./data/ur10/cube.zarr"
 
 inference:
-  max_steps: 500
+  num_inferences: 3
+  max_steps: 1000
   render: False
-  checkpoint_path: "./checkpoints/simple2_bypass.pt"
+  checkpoint_path: "./checkpoints/cube_trans.pt"
   simulator: isaacsim  # possible values: isaacsim
   warmstart: True
 
@@ -47,6 +48,6 @@ parameters:
   action_horizon: 5
 
 keypoint_args:
-  num_keypoints: 1
+  num_keypoints: 5
   min_dist: 0.0254
   threshold_force: 1.0
