--- a/config/ur10_cube.yaml
+++ b/config/ur10_cube.yaml
@@ -4,7 +4,7 @@ seed: 4077
 
 controller: joints  # possible values: joints
 action_list: ['commanded_ee_position_xy']  # possible values: commanded_ee_position, commanded_ee_rotation_6d, commanded_joints
-obs_list: ['ee_position_xy', 'torque']  # possible values: joint_pos, joint_vel, joint_eff, ee_position, ee_rotation_6d, force, torque
+obs_list: ['ee_position_xy', 'torque2']  # possible values: joint_pos, joint_vel, joint_eff, ee_position, ee_rotation_6d, force, torque
 keypoints_in_obs: True
 
 use_transformer: True
