--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
   "hydra-core~=1.3.2",
   "ipython~=8.11.0",
   "pandas~=2.0.1",
-  "pyzmq~=25.0.0",
+  "pyzmq~=26.1.0",
+  "zmq~=0.0.0",
 ]
 
 [tool.hatch.build.targets.wheel]
