Adding more stuff to make the simulation results work

--- a/config/ur10_cube.yaml
+++ b/config/ur10_cube.yaml
@@ -9,7 +9,7 @@ keypoints_in_obs: True
 
 use_transformer: False
 
-model_name: cube_cnn
+model_name: best_ours
 
 transformer_args:
   n_layer: 8
@@ -30,8 +30,8 @@ unet_args:
   n_groups: 8
 
 train:
-  num_epochs: 1000
-  dataset_path: "./data/ur10/cube.zarr"
+  num_epochs: 5000
+  dataset_path: ./data/ur10/cube_12.zarr
 
 inference:
   num_inferences: 25
@@ -47,7 +47,7 @@ parameters:
   # Diffusion horizons
   pred_horizon: 20
   obs_horizon: 3
-  action_horizon: 5
+  action_horizon: 10
 
 keypoint_args:
   num_keypoints: 10
