--- a/config/ur10_cube.yaml
+++ b/config/ur10_cube.yaml
@@ -9,7 +9,7 @@ keypoints_in_obs: True
 
 use_transformer: False
 
-model_name: best_ours
+model_name: maze
 
 transformer_args:
   n_layer: 8
@@ -30,8 +30,8 @@ unet_args:
   n_groups: 8
 
 train:
-  num_epochs: 5000
-  dataset_path: ./data/ur10/cube_12.zarr
+  num_epochs: 1000
+  dataset_path: ./data/ur10/maze.zarr
 
 inference:
   num_inferences: 25
@@ -42,14 +42,14 @@ inference:
   warmstart: True
 
 parameters:
-  num_diffusion_iters: 15
+  num_diffusion_iters: 45
 
   # Diffusion horizons
   pred_horizon: 20
-  obs_horizon: 3
+  obs_horizon: 6
   action_horizon: 10
 
 keypoint_args:
-  num_keypoints: 10
-  min_dist: 0.0254
+  num_keypoints: 7
+  min_dist: 0.075
   threshold_force: 1.0
