Simplifying install scripts

--- a/docker/prodapt/Dockerfile
+++ b/docker/prodapt/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /root
 COPY ./pyproject.toml /root/pyproject.toml
 COPY ./docker/prodapt/scripts/install_dependencies.bash /root/scripts/install_dependencies.bash
 COPY ./docker/prodapt/scripts/.bashrc /root/.bashrc
-RUN sh /root/scripts/install_dependencies.bash && rm -rf /var/lib/apt/lists/*
+RUN sh /root/scripts/install_dependencies.bash && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 RUN rosdep update
 
 ENV ROBOT_IP=192.168.56.20
