--- a/config/push_t.yaml
+++ b/config/push_t.yaml
@@ -2,13 +2,13 @@ name: push_t
 mode: inference
 seed: 4077
 
-action_list: ['ee_pose']  # possible values: ee_pose
-obs_list: ['state']  # possible values: state, img, keypoint, n_contacts
+action_list: [ee_pose]  # possible values: ee_pose
+obs_list: [state]  # possible values: state
 keypoints_in_obs: False
 
 use_transformer: False
 
-model_name: "push_t"
+model_name: push_t
 
 transformer_args:
   n_layer: 8
@@ -30,7 +30,7 @@ unet_args:
 
 train:
   num_epochs: 100
-  dataset_path: "./data/push_t_data.zarr"
+  dataset_path: ./data/push_t_data.zarr
 
 inference:
   max_steps: 200
